Update 20. LLM, LangChain y ChatBots.ipynb

--- a/codes/20_LLM_,_LangChain_y_ChatBots.ipynb
+++ b/codes/20_LLM_,_LangChain_y_ChatBots.ipynb
@@ -138,9 +138,9 @@
         "import openai\n",
         "\n",
         "\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"XXX\"\n",
         "\n",
-        "openai.organization = 'org-mqsbuos6qAi1pkIPxVqFrJTk'\n",
+        "openai.organization = 'XXX'\n",
         "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
         "openai.Model.list()"
       ],
@@ -2540,7 +2540,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Vamos a usar agentes, los cuales disponen de herramientas declaradas por nosotros para que ibteractúen con el LLM.\n",
+        "Vamos a usar agentes, los cuales disponen de herramientas declaradas por nosotros para que interactúen con el LLM.\n",
         "\n",
         "Ver documentación de agentes en: https://python.langchain.com/en/latest/modules/agents/agents.html\n",
         "\n",
@@ -2612,7 +2612,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"SERPAPI_API_KEY\"] = \"025075a6893e83438f3ce4015b3a4e4148f82617f12fc228623c7d1c5ff5ee81\"\n",
+        "os.environ[\"SERPAPI_API_KEY\"] = \"XXX\"\n",
         "\n",
         "search = SerpAPIWrapper()\n",
         "\n",
